--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,25 @@
 worker/.dev.vars
 worker/.wrangler
 worker/node_modules
+
+# Node / npm
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env files
+.env
+.env.*
+
+# OS / editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Temp
+*.log
+*.tmp
+*.swp
